--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,6 @@
     <string name="app_name">Gallery_test</string>
     <string name="sign_up">Sign Up</string>
     <string name="cancel">Cancel</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="new_password">New password*</string>
     <string name="confirm_password">Confirm password*</string>
@@ -15,4 +14,7 @@
     <string name="birthday">Birthday</string>
     <string name="email">Email</string>
     <string name="forgot_login_or_password">Forgot login or password!</string>
+    <string name="welcome_string">Welcome!</string>
+    <string name="create_an_account_string">Create an account</string>
+    <string name="i_already_have_an_account_string">I already have an account</string>
 </resources>
